# sso-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  OIDC_AUTH_SERVICE_SPEC.md  README.md  admin.py  app.py  auth.py  config.py  db.py  docker-compose.yml  oidc.py  pyproject.toml  test_admin.py  test_app.py  test_auth.py  test_db.py  test_oidc.py
templates/: account.html  admin_index.html  base.html  login.html  login_admin.html
